# beam-pyspark-runner

./: .pre-commit-config.yaml  LICENSE  README.md  manual_test.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: cicd.yaml  release.yaml
beam_pyspark_runner/: eval_context.py  evaluation_context.py  evaluator.py  execution_plan.py  helper_transforms.py  overrides.py  pyspark_runner.py  pyspark_runner_test.py  pyspark_visitors.py  transform_evaluator.py  transform_evaluators.py
tests/: pyspark_runner_test.py
